--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "compile": "tsc -p tsconfig.json",
     "clean": "rimraf dist",
     "ts": "ts-node",
-    "cli": "npm run build && node dist/src/cli.js"
+    "cli": "npm run build && node dist/cli.js"
   },
   "devDependencies": {
     "@types/node": "18.17.17",
