Implement run mocks

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "compile": "tsc -p tsconfig.json",
     "clean": "rimraf dist",
     "ts": "ts-node",
-    "cli": "npm run build && node dist/cli.js"
+    "cli": "npm run build && node dist/cli.js",
+    "mocks": "json-server --watch ./mocks/mock-server-data.json --port 3005"
   },
   "devDependencies": {
     "@types/node": "18.17.17",
