--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@typescript-eslint/parser": "6.7.0",
     "eslint": "8.49.0",
     "eslint-config-htmlacademy": "9.1.1",
+    "got": "^14.4.7",
     "json-server": "^1.0.0-beta.3",
     "rimraf": "5.0.1",
     "ts-node": "10.9.1",
