--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "clean": "rimraf dist",
     "ts": "ts-node",
     "cli": "npm run build && node dist/cli.js",
-    "mocks": "json-server --watch ./mocks/mock-server-data.json --port 3005"
+    "mocks": "json-server --watch ./mocks/mock-server-data.json --port 3005",
+    "dev": "npm run build && node dist/main.js | pino-pretty"
   },
   "devDependencies": {
     "@types/node": "18.17.17",
