--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "dev": "npm run build && node dist/main.js | pino-pretty"
   },
   "devDependencies": {
+    "@types/convict": "^6.1.6",
+    "@types/convict-format-with-validator": "^6.0.5",
+    "@types/dotenv": "^6.1.1",
     "@types/node": "18.17.17",
     "@types/pino": "^7.0.4",
     "@typescript-eslint/eslint-plugin": "6.7.0",
@@ -28,6 +31,7 @@
     "eslint-config-htmlacademy": "9.1.1",
     "got": "^14.4.7",
     "json-server": "^1.0.0-beta.3",
+    "pino-pretty": "^13.0.0",
     "rimraf": "5.0.1",
     "ts-node": "10.9.1",
     "typescript": "5.2.2"
@@ -38,6 +42,9 @@
     "npm": ">=8"
   },
   "dependencies": {
+    "convict": "^6.2.4",
+    "convict-format-with-validator": "^6.2.0",
+    "dotenv": "^16.5.0",
     "pino": "9.6.0"
   }
 }
