--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     "convict": "^6.2.4",
     "convict-format-with-validator": "^6.2.0",
     "dotenv": "^16.5.0",
-    "pino": "9.6.0"
+    "inversify": "^7.5.1",
+    "pino": "9.6.0",
+    "reflect-metadata": "^0.2.2",
+    "tslib": "^2.8.1"
   }
 }
