--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/convict": "^6.1.6",
     "@types/convict-format-with-validator": "^6.0.5",
     "@types/dotenv": "^6.1.1",
+    "@types/mongoose": "^5.11.96",
     "@types/node": "18.17.17",
     "@types/pino": "^7.0.4",
     "@typescript-eslint/eslint-plugin": "6.7.0",
@@ -42,10 +43,12 @@
     "npm": ">=8"
   },
   "dependencies": {
+    "@typegoose/typegoose": "^12.15.0",
     "convict": "^6.2.4",
     "convict-format-with-validator": "^6.2.0",
     "dotenv": "^16.5.0",
     "inversify": "^7.5.1",
+    "mongoose": "^8.14.1",
     "pino": "9.6.0",
     "reflect-metadata": "^0.2.2",
     "tslib": "^2.8.1"
