--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/convict": "^6.1.6",
     "@types/convict-format-with-validator": "^6.0.5",
     "@types/dotenv": "^6.1.1",
+    "@types/express": "^5.0.1",
     "@types/mongoose": "^5.11.96",
     "@types/node": "18.17.17",
     "@types/pino": "^7.0.4",
@@ -44,9 +45,13 @@
   },
   "dependencies": {
     "@typegoose/typegoose": "^12.15.0",
+    "class-transformer": "^0.5.1",
     "convict": "^6.2.4",
     "convict-format-with-validator": "^6.2.0",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "express-async-handler": "^1.2.0",
+    "http-status-codes": "^2.3.0",
     "inversify": "^7.5.1",
     "mongoose": "^8.14.1",
     "pino": "9.6.0",
