--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@types/convict-format-with-validator": "^6.0.5",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.1",
+    "@types/mime-types": "^2.1.4",
     "@types/mongoose": "^5.11.96",
+    "@types/multer": "^1.4.12",
     "@types/node": "18.17.17",
     "@types/pino": "^7.0.4",
     "@typescript-eslint/eslint-plugin": "6.7.0",
@@ -54,7 +56,10 @@
     "express-async-handler": "^1.2.0",
     "http-status-codes": "^2.3.0",
     "inversify": "^7.5.1",
+    "mime-types": "^3.0.1",
     "mongoose": "^8.14.1",
+    "multer": "^1.4.5-lts.2",
+    "nanoid": "^5.1.5",
     "pino": "9.6.0",
     "reflect-metadata": "^0.2.2",
     "tslib": "^2.8.1"
